# reboot-manager

./: CHANGELOG.md  Makefile.am  NOTICE  README.md  configure.ac  cov_build.sh  run_l2.sh  unit_test.sh
.github/workflows/: .code-coverage.yml.swo  L1-tests.yml  L2-tests.yml  code-coverage.yml  native_full_build.yml
docs/: architecture.md
docs/reboot-helper/: HLD.md  LLD.md  README.md  testing.md
docs/reboot-helper/diagrams/: flowchart.md  sequence-diagram.md
docs/reboot-reason-fetcher/: HLD.md  LLD.md  Reboot_checker_mig.md  architecture.md
docs/reboot-reason-fetcher/diagrams/: flowchart.md  sequence-diagram.md
include/: rbus_interface.h  rebootNow.h
reboot-helper/include/: reboot.h  rebootmgr_rbus_interface.h
reboot-helper/src/: Makefile.am  cyclic_reboot.c  rbus_interface.c  reboot_main.c  system_cleanup.c  utils.c
reboot-reason-fetcher/include/: update-reboot-info.h
reboot-reason-fetcher/src/: Makefile.am  bootup_reason_checker.c  json.c  log_parser.c  parodus_log_update.c  platform_hal.c  reboot_checker.c  reboot_reason_classify.c  rebootreason_main.c
rebootnow/include/: rbus_interface.h  rebootnow.h
rebootnow/src/: Makefile.am  cyclic_reboot.c  main.c  rbus_interface.c  rebootmgr_rbus_interface.c  system_cleanup.c  utils.c
scripts/: rdm.conf  reboot-checker.sh  reboot.sh  rebootNow.sh  update_previous_reboot_info.sh
services/: reboot-reason-logger.service  update-reboot-info.path  update-reboot-info.service
src/: Makefile.am  cyclic_reboot.c  rbus_interface.c  rebootNow_main.c  system_cleanup.c  utils.c
tests/functional_tests/features/: check_cyclic_reboot.feature  check_file.feature  firmware_failure.feature  hardpower_reboot.feature  kernel_panic_test.feature  message_log_update.feature  parodus_log_update.feature  power_reset.feature  previous_reboot_reason.feature  reboot_classification.feature  software_reboottest.feature  test_cyclic_reboot.feature  test_pid_guard.feature  test_reboot_crash_maintenance.feature  test_reboot_triggered.feature  test_scenario_bootup_reboot_files_and_log_created.feature  test_scenario_hard_reboot_unknown_defaults_to_null_mapping.feature  test_scenario_hard_reboot_updates_hardpower_and_previousreboot.feature  test_scenario_hardware_detection_paths_defined.feature  test_scenario_kernel_panic_oops_is_logged_in_messages.feature  test_scenario_kernel_panic_oops_updates_reboot_files_via_reboot_binary.feature  test_scenario_parodus_log_contains_reboot_reason.feature  test_scenario_previous_parodus_file_has_software_reboot_info.feature  test_scenario_previous_reboot_info_json_format.feature  test_scenario_previous_reboot_info_string_in_messages.feature  test_scenario_reboot_info_log_previous_fields_present.feature  test_scenario_soft_reboot_category_classification_matrix.feature  test_scenario_soft_reboot_updates_reboot_log_and_previous_reboot_info.feature  test_scenario_update_prev_reboot_generates_previous_files_and_flags.feature  test_scenario_update_prev_reboot_service_flow_after_stt_flag.feature  test_system_cleanup.feature
tests/functional_tests/test/: check_message_log_file_update.py  check_previous_reboot_info_file.py  conftest.py  cyclic_reboot_test.py  firmware_failure_reason.py  helper_functions.py  kernel_panic_test.py  parodus_log_update.py  reboot_check_file.py  reboot_classification.py  reboot_reason_hard_power.py  reboot_reason_power_reset_check.py  reboot_reason_software_reset_check.py  reboot_reason_test_common.py  test_cyclic_reboot.py  test_pid_guard.py  test_reboot_crash_maintenance.py  test_reboot_triggered.py  test_scenario_bootup_reboot_files_and_log_created.py  test_scenario_hard_reboot_unknown_defaults_to_null_mapping.py  test_scenario_hard_reboot_updates_hardpower_and_previousreboot.py  test_scenario_kernel_panic_oops_is_logged_in_messages.py  test_scenario_kernel_panic_oops_updates_reboot_files_via_reboot_binary.py  test_scenario_parodus_log_contains_reboot_reason.py  test_scenario_previous_parodus_file_has_software_reboot_info.py  test_scenario_previous_reboot_info_json_format.py  test_scenario_previous_reboot_info_string_in_messages.py  test_scenario_reboot_info_log_previous_fields_present.py  test_scenario_soft_reboot_category_classification_matrix.py  test_scenario_soft_reboot_updates_reboot_log_and_previous_reboot_info.py  test_scenario_update_prev_reboot_generates_previous_files_and_flags.py  test_scenario_update_prev_reboot_service_flow_after_stt_flag.py  test_scenario_update_prev_reboot_skips_when_flags_missing.py  test_system_cleanup.py
unittest/: Makefile.am  configure.ac  cyclic_reboot_gtest.cpp  rbus_interface_gtest.cpp  reboot_classify_gtest.cpp  reboot_json_gtest.cpp  reboot_log_parser_gtest.cpp  reboot_main_gtest.cpp  reboot_parodus_gtest.cpp  reboot_platform_hal_gtest.cpp  rebootreason_main_gtest.cpp  rfc_interface_gtest.cpp  system_cleanup_gtest.cpp  utils_gtest.cpp
unittest/mocks/: mock_reboot_utils.cpp  mock_reboot_utils.h  rbus_mock_types.h  rdk_debug.h  rdk_fwdl_utils.h  rdk_logger_stub.c  rfc_mock_types.h  rfcapi_stub.c  secure_wrapper.h  secure_wrapper_stub.c  telemetry_busmessage_sender.cpp  telemetry_busmessage_sender.h  unit_stubs.c
